B&L QA/objects/Monthly_Implantation_Detail__c.object
<CustomObject>
    <description>APACSU object used to capture and calculate market share for B&amp;L and Competitor Products.</description>
    <fields>
        <fullName>AKREOS_ADAPT__c</fullName>
        <description>APACSU field to collect implantation done for Akreos Adapt</description>
        <label>AKREOS ADAPT</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AKREOS_AO__c</fullName>
        <description>INDSU field to collect implantation done for AKREOS AO</description>
        <label>AKREOS AO</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AKREOS_MIL__c</fullName>
        <description>INDSU field to collect implantation done for AKREOS MIL</description>
        <label>AKREOS MIL</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AKREOS_MI_60__c</fullName>
        <description>APACSU field to collect implantations done for Akreos MI-60</description>
        <label>AKREOS MI-60</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AKREOS__c</fullName>
        <description>INDSU field to collect implantation done for AKREOS</description>
        <label>AKREOS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_ReStor__c</fullName>
        <description>APACSU field to collect implantation done for No of IOLs   Acrysof ReStor</description>
        <label>Acrysof ReStor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_Toric__c</fullName>
        <description>APACSU field to collect implantation done for No of IOLs Acrysof Toric</description>
        <label>Acrysof Toric</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundling_Competitor__c</fullName>
        <description>Competition Bundling</description>
        <label>Bundling Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>Alcon</fullName>
                </value>
                <value>
                    <fullName>Ziess</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canon_Staar__c</fullName>
        <description>APACSU field to collect implantation done for No of IOLs  Canon-Staar</description>
        <label>Canon-Staar</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crystalens__c</fullName>
        <description>INDSU field to collect implantation details for Crystalens</description>
        <label>Crystalens</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Total_Implantations_Done__c</fullName>
        <formula>Sum_of_Alcon_Product_implantations__c + Sum_of_AMO_Product_implantations__c + Sum_of_B_L_Product_implantations__c + Canon_Staar__c + Hoya__c + No_of_IOLs_OTHERS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Total Implantations Done</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Total_Implantations__c</fullName>
        <description>INDSU field to collect current total implantations (Imported Foldable Implant) done by the physician in the month</description>
        <label>Current Total Implantations</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Envista__c</fullName>
        <label>Envista</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Bundling Competitor Expiry Date</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hoya__c</fullName>
        <description>APACSU field to collect implantation done for No of IOLs Hoya</description>
        <label>Hoya</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LI61AOV__c</fullName>
        <description>INDSU field to collect implantation done for LI61AOV</description>
        <label>LI61AOV</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LI61_AO__c</fullName>
        <description>INDSU field to collect implantation done for LI61 AO</description>
        <label>LI61 AO</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LI61_SE__c</fullName>
        <description>INDSU field to collect implantation done for LI61 SE</description>
        <label>LI61 SE</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_AKREOS_AO__c</fullName>
        <description>INDSU field to calculate market share of AKREOS AO</description>
        <formula>AKREOS_AO__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share AKREOS AO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_AKREOS__c</fullName>
        <description>INDSU field to calculate market share of AKREOS</description>
        <formula>AKREOS__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share AKREOS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_AMO__c</fullName>
        <description>INDSU field to calculate market share of AMO</description>
        <formula>No_of_IOLs_AMO__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share AMO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Acrysof_3_piece__c</fullName>
        <description>INDSU field to calculate market share of Acrysof 3 piece</description>
        <formula>No_of_IOLs_Acrysof_3_piece__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Acrysof 3 piece</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Acrysof_IQ__c</fullName>
        <description>INDSU field to calculate market share of Acrysof IQ</description>
        <formula>No_of_IOLs_Acrysof_IQ__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Acrysof- IQ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Acrysof_ReStor__c</fullName>
        <formula>Acrysof_ReStor__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Acrysof ReStor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Acrysof_Single_piece__c</fullName>
        <description>INDSU field to calculate market share of Acrysof Single piece</description>
        <formula>No_of_IOLs_Acrysof_3_piece__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Acrysof Single piece</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Acrysof_Toric__c</fullName>
        <formula>Acrysof_Toric__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Acrysof Toric</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Akreos_Adapt__c</fullName>
        <formula>AKREOS_ADAPT__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share - Akreos Adapt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Akreos_MIL__c</fullName>
        <description>INDSU field to calculate Akreos MIL market share</description>
        <formula>AKREOS_MIL__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share - Akreos MIL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Akreos_MI_60__c</fullName>
        <formula>AKREOS_MI_60__c /  Current_Total_Implantations__c*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Akreos MI-60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Canon_Staar__c</fullName>
        <formula>Canon_Staar__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Canon-Staar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Crystalens__c</fullName>
        <description>INDSU formula field to calculate market share of Crystalens</description>
        <formula>(Crystalens__c / Current_Total_Implantations__c *100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share - Crystalens</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Envista__c</fullName>
        <formula>Envista__c  / Current_Total_Implantations__c*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Envista</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_HANITTA__c</fullName>
        <description>INDSU field to calculate market share of Hanitta</description>
        <formula>No_of_IOLs_HANITTA__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share HANITTA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Hoya__c</fullName>
        <formula>Hoya__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Hoya</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_LI61AOV__c</fullName>
        <description>INDSU field to calculate market share of LI61AOV</description>
        <formula>LI61AOV__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share LI61AOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_LI61_AO__c</fullName>
        <description>INDSU field to calculate market share of LI61 AO</description>
        <formula>LI61_AO__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share LI61 AO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_LI61_SE__c</fullName>
        <description>INDSU field to calculate market share of LI61 SE</description>
        <formula>LI61_SE__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share LI61 SE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_OTHERS__c</fullName>
        <description>INDSU field to calculate market share of Other products</description>
        <formula>No_of_IOLs_OTHERS__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share OTHERS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Rayner__c</fullName>
        <description>INDSU field to calculate market share of Rayner</description>
        <formula>No_of_IOLs_Rayner__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Rayner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_ReZoom__c</fullName>
        <formula>ReZoom__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share ReZoom</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Sensar__c</fullName>
        <description>INDSU field to calculate market share of Sensar</description>
        <formula>No_of_IOLs_Sensar__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share  Sensar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Tecnis_Acrylic__c</fullName>
        <description>INDSU field to calculate market share of Tecnis Acrylic</description>
        <formula>No_of_IOLs_Tecnis_Acrylic__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Tecnis Acrylic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Tecnis_Multifocal__c</fullName>
        <formula>Tecnis_Multifocal__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Tecnis Multifocal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_Tecnis__c</fullName>
        <formula>Tecnis__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share Tecnis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mkt_Share_ZEISS__c</fullName>
        <description>INDSU field to calculate market share of ZEISS</description>
        <formula>No_of_IOLs_ZEISS__c / Current_Total_Implantations__c *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Share ZEISS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>APACSU field to capture month name for which the record is created.</description>
        <label>Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_IOLs_AMO__c</fullName>
        <description>INDSU field to collect implantation done for No of IOLs AMO</description>
        <label>No of IOLs AMO</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IOLs_Acrysof_3_piece__c</fullName>
        <description>INDSU field to collect implantation done for No of IOLs Acrysof 3 piece</description>
        <label>No of IOLs   Acrysof 3 piece</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IOLs_Acrysof_IQ__c</fullName>
        <description>INDSU field to collect implantation done for No of IOLs   Acrysof 3 piece</description>
        <label>No of IOLs  Acrysof- IQ</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IOLs_Acrysof_Single_piece__c</fullName>
        <description>INDSU field to collect implantation done for No of IOLs Acrysof Single piece</description>
        <label>No of IOLs Acrysof Single piece</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IOLs_HANITTA__c</fullName>
        <description>INDSU field to collect implantation done for No of IOLs  HANITTA</description>
        <label>No of IOLs  HANITTA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IOLs_OTHERS__c</fullName>
        <description>INDSU field to collect implantation done for No of IOLs  OTHERS</description>
        <label>No of IOLs  OTHERS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IOLs_Rayner__c</fullName>
        <description>INDSU field to collect implantation done for No of IOLs  Rayner</description>
        <label>No of IOLs  Rayner</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IOLs_Sensar__c</fullName>
        <description>INDSU field to collect implantation done for No of IOLs Sensar</description>
        <label>No of IOLs Sensar</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IOLs_Tecnis_Acrylic__c</fullName>
        <description>INDSU field to collect implantation done for No of IOLs  Tecnis Acrylic</description>
        <label>No of IOLs  Tecnis Acrylic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IOLs_ZEISS__c</fullName>
        <description>INDSU field to collect implantation done for No of IOLs  ZEISS</description>
        <label>No of IOLs  ZEISS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_OT_Hours__c</fullName>
        <label>No of OT Hours</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INDSU field to collect physician details</description>
        <label>Physician Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReZoom__c</fullName>
        <description>APACSU field to collect implantation done for No of IOLs  ReZoom</description>
        <label>ReZoom</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_AMO_Product_implantations__c</fullName>
        <description>APACSU field to display sum of AMO product implantations</description>
        <formula>IF( $RecordType.Name   =  &quot;INDSU Monthly Implantation Detail&quot; , No_of_IOLs_Sensar__c + No_of_IOLs_Tecnis_Acrylic__c + No_of_IOLs_AMO__c, IF( $RecordType.Name   =  &quot;APACSU Monthly Implantation Detail&quot; , No_of_IOLs_Sensar__c +  ReZoom__c  +  Tecnis__c  +  Tecnis_Multifocal__c  ,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of AMO Product implantations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Alcon_Product_implantations__c</fullName>
        <description>APACSU field to display sum of Alcon product implantations</description>
        <formula>IF( $RecordType.Name   =  &quot;INDSU Monthly Implantation Detail&quot; , No_of_IOLs_Acrysof_3_piece__c + No_of_IOLs_Acrysof_IQ__c + No_of_IOLs_Acrysof_Single_piece__c, IF( $RecordType.Name   =  &quot;APACSU Monthly Implantation Detail&quot; ,No_of_IOLs_Acrysof_Single_piece__c  +  No_of_IOLs_Acrysof_3_piece__c  +  No_of_IOLs_Acrysof_IQ__c  +  Acrysof_ReStor__c  +  Acrysof_Toric__c,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of Alcon Product implantations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_B_L_Product_implantations__c</fullName>
        <description>APACSU field to display sum of B&amp;L product implantations</description>
        <formula>IF( $RecordType.Name   =  &quot;INDSU Monthly Implantation Detail&quot; , AKREOS__c + AKREOS_AO__c + AKREOS_MIL__c + Crystalens__c + LI61_AO__c + LI61AOV__c + LI61_SE__c, IF( $RecordType.Name   =  &quot;APACSU Monthly Implantation Detail&quot; ,  AKREOS_MI_60__c  +  AKREOS_AO__c  +  AKREOS_ADAPT__c  +  LI61_AO__c  +  LI61_SE__c   ,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of B&amp;L Product implantations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis_Multifocal__c</fullName>
        <description>APACSU field to collect implantation done for No of IOLs  Tecnis Multifocal</description>
        <label>Tecnis Multifocal</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis__c</fullName>
        <description>APACSU field to collect implantation done for No of IOLs Tecnis</description>
        <label>Tecnis</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_AMO__c</fullName>
        <label>1.8mm - AMO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_Alcon__c</fullName>
        <label>1.8mm - Alcon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_B_L__c</fullName>
        <label>1.8mm - B&amp;L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_HumanOptics__c</fullName>
        <label>1.8mm - HumanOptics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_Others__c</fullName>
        <label>1.8mm - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_Zeiss__c</fullName>
        <label>1.8mm - Zeiss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_AMO__c</fullName>
        <label>2.2mm - AMO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_Alcon__c</fullName>
        <label>2.2mm - Alcon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_B_L__c</fullName>
        <label>2.2mm - B&amp;L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_HumanOptics__c</fullName>
        <label>2.2mm - HumanOptics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_Others__c</fullName>
        <label>2.2mm - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_Zeiss__c</fullName>
        <label>2.2mm - Zeiss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_AMO__c</fullName>
        <label>2.8mm - AMO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_Alcon__c</fullName>
        <label>2.8mm - Alcon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_B_L__c</fullName>
        <label>2.8mm - B&amp;L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_HumanOptics__c</fullName>
        <label>2.8mm - HumanOptics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_Others__c</fullName>
        <label>2.8mm - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_Zeiss__c</fullName>
        <label>2.8mm - Zeiss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>INDSU field to capture year details</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Monthly Implantation Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Physician_Name__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP- {00000000}</displayFormat>
        <label>Monthly Implantation Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Implantation Detail</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Monthly_Implantation_Detail</fullName>
        <active>true</active>
        <description>APACSU record type to capture implantation details for B&amp;L and Competitor Products based on Month and Physician combination</description>
        <label>APACSU Monthly Implantation Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Monthly_Implantation_Detail</fullName>
        <active>true</active>
        <description>INDSU record type to capture implantation details for B&amp;L and Competitor Products based on Month and Physician combination</description>
        <label>INDSU Monthly Implantation Detail</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>